@@ -28,7 +28,7 @@ jobs:
         name: Install Apt Packages
         run: sudo apt-get install -qq aspell-en language-pack-fr language-pack-en language-pack-de language-pack-it
       - name: Cache CPAN Modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: local
           key: perl-${{ steps.perl.outputs.perl-hash }}
