@@ -16,7 +16,7 @@ jobs:
       uses: shogo82148/actions-setup-perl@v1
       with: { perl-version: latest }
     - name: Cache CPAN Modules
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: local
         key: perl-${{ steps.perl.outputs.perl-hash }}
