@@ -29,6 +29,9 @@ Revision history for Perl extension App::Sqitch
        of Perl, and added tests to ensure that the sqitch CLI executes and
        properly emits localized messages (except on Windows, where the language
        codes are incompatible).
+     - Fixed an issue where the MySQL engine failed to recognize the MariaDB
+       `mysql` client installed by Homebrew on macOS. Thanks to Carlos Ramos
+       for the bug report and PR (#791)!
 
 1.4.0 2023-08-01T23:37:30Z
      - Fixed Snowflake warehouse and role setup to properly quote identifiers
